--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 dist: xenial
 language: python
 python:
-    - 3.5
-    - 3.6
-    - 3.7
-    - 3.8
+  - 3.5
+  - 3.6
+  - 3.7
+  - 3.8
 install:
-    - pip install -r requirements.txt
+  - pip install -r requirements.txt
+  - pip install codecov
 services:
   - xvfb
 script:
   coverage run --source=DVHA-Stats setup.py test
+after_success:
+  - codecov
