--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -22,7 +22,7 @@ jobs:
         pip install pytest-cov
         pytest --cov=./ --cov-report=xml
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1.05
+      uses: codecov/codecov-action@master
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
