--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -22,12 +22,4 @@ jobs:
         pip install pytest-cov
         pytest --cov=./ --cov-report=xml
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@master
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.xml
-        directory: ./coverage/reports/
-        flags: unittests
-        env_vars: OS,PYTHON
-        fail_ci_if_error: true
-        path_to_write_report: ./coverage/codecov_report.gz
+      uses: codecov/codecov-action@v1
